# articleservice/src/swagger/src/main/java/com/workingbit/article/api/ArticleApi.java
@@ -6,16 +6,23 @@
 package com.workingbit.article.api;
 
 import com.workingbit.article.model.ResponseError;
+
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.util.List;
+import javax.validation.constraints.*;
 import javax.validation.Valid;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-09-22T08:39:56.125+03:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-09-22T09:48:47.555+03:00")
 
 @Api(value = "article", description = "the article API")
 public interface ArticleApi {
@@ -62,17 +69,17 @@ public interface ArticleApi {
     }
 
 
-    @ApiOperation(value = "Info for a specific board", notes = "", response = com.workingbit.share.domain.impl.BoardContainer.class, tags={ "board", })
+    @ApiOperation(value = "Info for a specific board", notes = "", response = com.workingbit.share.domain.impl.BoardBox.class, tags={ "board", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Expected response to a valid request", response = com.workingbit.share.domain.impl.BoardContainer.class),
+        @ApiResponse(code = 200, message = "Expected response to a valid request", response = com.workingbit.share.domain.impl.BoardBox.class),
         @ApiResponse(code = 200, message = "unexpected ResponseError", response = ResponseError.class) })
     
     @RequestMapping(value = "/article/{articleId}/board",
         produces = { "application/json;charset=UTF-8" }, 
         method = RequestMethod.GET)
-    default ResponseEntity<com.workingbit.share.domain.impl.BoardContainer> findBoardByArticleId(@ApiParam(value = "The id of the board to retrieve",required=true ) @PathVariable("articleId") String articleId) {
+    default ResponseEntity<com.workingbit.share.domain.impl.BoardBox> findBoardByArticleId(@ApiParam(value = "The id of the board to retrieve",required=true ) @PathVariable("articleId") String articleId) {
         // do some magic!
-        return new ResponseEntity<com.workingbit.share.domain.impl.BoardContainer>(HttpStatus.OK);
+        return new ResponseEntity<com.workingbit.share.domain.impl.BoardBox>(HttpStatus.OK);
     }
 
 }
